--- a/CG/CG.csproj
+++ b/CG/CG.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AssimpNetter" Version="5.4.3.3" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
     <PackageReference Include="StbImageSharp" Version="2.30.15" />
+    <PackageReference Include="System.Drawing.Common" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
